updated build process